# preflight

./: .editorconfig  .env.example  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  example.config.js  jest.config.base.ts  jest.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsconfig.test.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS
dashboards/: ai-coding-assistant-manager-view.json  ai-coding-assistant-overview.json  ai-coding-assistant-personal.json  ai-coding-assistant-platform-comparison.json  ai-coding-assistant-security.json  ai-coding-assistant-session-detail.json  ai-coding-assistant-team-view.json
docs/: ADVANCED.md  CODE_REVIEW.md  COMMANDS_TABLE.md  DEMO_AND_ANNOUNCEMENT_4.md  DEMO_AND_ANNOUNCEMENT_TEMPLATE.md  IMPLEMENTATION.md  METRICS_TABLE.md  MULTI_INSTANCE_PROPOSAL.md  ONBOARDING.md  PRODUCT_BRIEF.md  PUBLIC_RELEASE_PLAN.md  RELEASE_AUDIT.md  ROADMAP.md  SECURITY.md  TEST_PATTERNS.md  WALKTHROUGH.md
python/: README.md  pyproject.toml
python/src/nr_ai_agent/: __init__.py  config.py  errors.py  pricing.py  timing.py
python/src/nr_ai_agent/hooks/: __init__.py  anthropic_hook.py  gemini_hook.py
python/src/nr_ai_agent/metrics/: __init__.py  cache_economics.py  conversation.py  cost_attribution.py  multimodal.py  provider_comparison.py  quality.py  reasoning.py
python/src/nr_ai_agent/transport/: __init__.py  base.py
python/tests/: __init__.py  conftest.py  test_agent.py  test_cache_economics.py  test_config.py  test_conversation.py  test_cost_attribution.py  test_errors.py  test_hooks.py  test_multimodal.py  test_pricing.py  test_provider_comparison.py  test_quality.py  test_reasoning.py  test_timing.py
src/: config.ts  (+10 more)
(+269 files in other folders)
