[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nr-ai-agent"
version = "0.1.0"
description = "Python SDK for observability of AI model usage in New Relic"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "New Relic", email = "ai-agent@newrelic.com" }]
keywords = ["ai", "observability", "new-relic", "anthropic", "google-genai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "requests>=2.28",
  "wrapt>=1.14",
  "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.7"]
google-genai = ["google-genai>=0.1"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "anthropic>=0.7",
  "google-genai>=0.1",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/nr_ai_agent"]
omit = [
  "*/tests/*",
  "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
